fix: icon-container class overlap bug

--- a/components/Badge/badge.css
+++ b/components/Badge/badge.css
@@ -42,7 +42,7 @@
   margin: 0 0.5rem;
   padding: 1rem;
 }
-.icon-container {
+.icons-container {
   position: relative;
 }
 .icon-badge {
